--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,10 @@ body {
     padding-left: calc((100% - var(--container-width)) / 2 + var(--container-padding));
 }
 
+.none {
+    display: none;
+}
+
 /* Header */
 
 .header {
@@ -532,58 +536,58 @@ body {
 /* Burger Menu */
 
 .menu-icon-wrapper {
-  width: 30px;
-  height: 30px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .menu-icon {
-  position: relative;
-  width: 30px;
-  height: 5px;
-  background-color: #fff;
+    position: relative;
+    width: 30px;
+    height: 5px;
+    background-color: #fff;
 }
 
 .menu-icon::before {
-  position: absolute;
-  left: 0;
-  top: -10px;
-  content: '';
-  width: 30px;
-  height: 5px;
-  background-color: #fff;
-  transition: transform 0.2s ease-in, top 0.2s linear 0.2s;
+    position: absolute;
+    left: 0;
+    top: -10px;
+    content: '';
+    width: 30px;
+    height: 5px;
+    background-color: #fff;
+    transition: transform 0.2s ease-in, top 0.2s linear 0.2s;
 
 }
 
 .menu-icon::after {
-  position: absolute;
-  left: 0;
-  top: 10px;
-  content: '';
-  width: 30px;
-  height: 5px;
-  background-color: #fff;
-  transition: transform 0.2s ease-in, top 0.2s linear 0.2s;
+    position: absolute;
+    left: 0;
+    top: 10px;
+    content: '';
+    width: 30px;
+    height: 5px;
+    background-color: #fff;
+    transition: transform 0.2s ease-in, top 0.2s linear 0.2s;
 
 }
 
 .menu-icon.menu-icon-active {
-  background-color: transparent;
+    background-color: transparent;
 }
 
 .menu-icon.menu-icon-active::before {
-  transform: rotate(45deg);
-  top: 0;
-  transition: top 0.2s linear, transform 0.2s ease-in 0.2s;
+    transform: rotate(45deg);
+    top: 0;
+    transition: top 0.2s linear, transform 0.2s ease-in 0.2s;
 }
 
 .menu-icon.menu-icon-active::after {
-  transform: rotate(-45deg);
-  top: 0;
-  transition: top 0.2s linear, transform 0.2s ease-in 0.2s;
+    transform: rotate(-45deg);
+    top: 0;
+    transition: top 0.2s linear, transform 0.2s ease-in 0.2s;
 }
 
 
@@ -597,12 +601,15 @@ body {
     .container-right {
         padding-right: 15px;
     }
-
 }
 
 @media (max-width: 1000px) {
     .nav__list {
         display: none;
+    }
+
+    .no--scroll {
+        overflow-y: hidden;
     }
 
     .nav__login {
@@ -613,6 +620,10 @@ body {
         display: block;
     }
 
+    .nav--mobile .logo {
+        font-size: 34px;
+    }
+
     .nav--mobile {
         position: fixed;
         left: 0;
@@ -620,6 +631,109 @@ body {
         width: 100%;
         height: 100%;
         z-index: 99;
+        flex-direction: column;
+        padding-top: 40px;
+        padding-bottom: 40px;
+        align-items: center;
         background: linear-gradient(209deg, #428E5F -17.38%, #112120 78.4%), #204434;
+    }
+
+    .nav--mobile .nav__list {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        row-gap: 40px;
+        font-size: 22px;
+    }
+
+    .nav--mobile .nav__list a.active::after,
+    .nav--mobile .nav__list a:hover::after {
+        display: none;
+    }
+
+    .nav--mobile .nav__login {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        row-gap: 40px;
+        font-size: 22px;
+    }
+
+    .nav--mobile .nav__toggle {
+        position: fixed;
+        top: 50px;
+        right: 50px;
+    }
+
+
+    .header__img img {
+        right: -256px;
+    }
+
+    .header__img::after {
+        right: -300px;
+    }
+}
+
+@media (max-width: 850px) {
+    .header {
+        min-height: unset;
+        padding-top: 20px;
+    }
+
+    .header__top {
+        margin-bottom: 40px;
+    }
+
+    .header__row {
+        flex-direction: column;
+    }
+
+    .header__img img {
+        position: static;
+        width: 70%;
+        height: auto;
+    }
+
+    .header__img::after {
+        right: 0px;
+        top: 100px;
+    }
+
+    .header__title {
+        margin-bottom: 20px;
+        font-size: 35px;
+        line-height: 50px;
+    }
+
+    .header__text {
+        max-width: 400px;
+        margin-bottom: 34px;
+        font-size: 15px;
+    }
+
+    .header__badge {
+        padding: 7px 16px;
+        border-radius: 10px;
+    }
+
+    .btn--header {
+        padding: 20px 30px;
+        font-size: 23px;
+    }
+
+    .btn {
+        border-radius: 16px;
+    }
+}
+
+@media (max-width: 460px) {
+    .nav--mobile .nav__toggle {
+        top: 25px;
+        right: 25px;
+    }
+
+    .nav--mobile .nav__list {
+        row-gap: 20px;
     }
 }
